@@ -24,11 +24,10 @@
 
 #define PR(x) std::cout << #x << " = " << x << std::endl
 
-class MiniReaderAlg : public EL::Algorithm
-{
+class MiniReaderAlg : public EL::Algorithm {
   // put your configuration variables here as public variables.
   // that way they can be set directly from CINT and python.
-public:
+ public:
   // float cutValue;
 
 
@@ -36,10 +35,11 @@ public:
   // variables that don't get filled at submission time should be
   // protected from being send from the submission node to the worker
   // node (done by the //!)
-public:
+ public:
   // Tree *myTree; //!
   // TH1 *myHist; //!
 
+  // To read the branches:
   MiniReaderElectrons m_el; //!
   MiniReaderMuons m_mu; //!
   MiniReaderJets m_jet; //!
@@ -51,27 +51,44 @@ public:
 
   int m_eventCounter; //!
 
-  std::vector<TH1F*> m_HistoContainer; //!
+  // The histogram container:
+  std::vector<TH1F *> m_HistoContainer; //!
 
+  // To fill the histograms:
   void DefineHisto(int, int, float, float); //!
   void InitHisto(); //!
 
   void FillJets(); //!
+  void FillEventInfo(); //!
 
+  // Auxiliary functions:
+  double deltaPhi(double, double);
+  double deltaR(double, double, double, double);
+
+  // SR definitions:
+  bool isM0();
+  bool isM5();
+  bool isM9();
+
+  // Event definition:
+  bool passEventSelection();
+
+  // Plot functions:
+  void PlotJetEfficency();
 
   // this is a standard constructor
   MiniReaderAlg();
 
   // these are the functions inherited from Algorithm
-  virtual EL::StatusCode setupJob (EL::Job& job);
-  virtual EL::StatusCode fileExecute ();
-  virtual EL::StatusCode histInitialize ();
-  virtual EL::StatusCode changeInput (bool firstFile);
-  virtual EL::StatusCode initialize ();
-  virtual EL::StatusCode execute ();
-  virtual EL::StatusCode postExecute ();
-  virtual EL::StatusCode finalize ();
-  virtual EL::StatusCode histFinalize ();
+  virtual EL::StatusCode setupJob(EL::Job &job);
+  virtual EL::StatusCode fileExecute();
+  virtual EL::StatusCode histInitialize();
+  virtual EL::StatusCode changeInput(bool firstFile);
+  virtual EL::StatusCode initialize();
+  virtual EL::StatusCode execute();
+  virtual EL::StatusCode postExecute();
+  virtual EL::StatusCode finalize();
+  virtual EL::StatusCode histFinalize();
 
   // this is needed to distribute the algorithm to the workers
   ClassDef(MiniReaderAlg, 1);
