@@ -4,8 +4,10 @@
 #define MINETA -5.
 #define MAXETA 5.
 
-#define SOME_ENUM(DO)       \
-  DO(jetMultiplicity)	    \
+#define SOME_ENUM(DO)  	      	\
+  DO(InteractionPerCrossing)   	\
+  DO(jetMultiplicity)  	       	\
+  DO(jetEfficency)     	       	\
 
 #define MAKE_ENUM(VAR) VAR,
 enum HistoNames {
@@ -30,10 +32,23 @@ void MiniReaderAlg::DefineHisto(int name, int nbin, float x_low, float x_max)
 void MiniReaderAlg::InitHisto()
 {
   // Jet Histos:
-  DefineHisto(jetMultiplicity, 20, 0, 20);
+  DefineHisto(InteractionPerCrossing, 20, 0, 40);
+  DefineHisto(jetMultiplicity, 20, 0, 100);
+  DefineHisto(jetEfficency, 20, 0, 40);
 }
 
 void MiniReaderAlg::FillJets()
 {
   m_HistoContainer[jetMultiplicity]->Fill(m_jet.m_jet_mult);
+}
+
+void MiniReaderAlg::FillEventInfo()
+{
+  m_HistoContainer[InteractionPerCrossing]->Fill(m_runp.m_actualInteractionsPerCrossing);
+}
+
+void MiniReaderAlg::PlotJetEfficency()
+{
+  m_HistoContainer[jetEfficency]->Divide(m_HistoContainer[InteractionPerCrossing],
+					 m_HistoContainer[InteractionPerCrossing]);
 }
